--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "cloudinary": "^2.5.1",
     "framer-motion": "^12.4.1",
     "lucide-react": "^0.475.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-resizable": "^3.0.5",
