--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-qr-barcode-scanner": "^2.0.0",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3"
