--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.4.1",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
+    "quagga": "^0.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-qr-barcode-scanner": "^2.0.0",
